--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -6,11 +6,11 @@
 
   &__sub-node {
     margin: 0;
-    opacity: 0;
-    transition: height 0.2s ease-out, opacity 0.1s ease-out;
+    visibility: hidden;
+    transition: height 0.2s ease-out;
 
     &--expanded {
-      opacity: 1;
+      visibility: visible;
     }
   }
 
