--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -67,7 +67,7 @@
     <mat-cell  class="records-table__menu-column"  *matCellDef="let row">
       <mat-icon class="detail__menu-button"
                 [matMenuTriggerFor]="contextMenu"
-                (click)="context = row.id; $event.stopPropagation()">
+                (click)="context = row; $event.stopPropagation()">
         more_horiz
       </mat-icon>
     </mat-cell>
@@ -79,7 +79,13 @@
 
 <mat-menu #contextMenu="matMenu">
   <ng-template matMenuContent>
-      <button mat-menu-item (click)="onEdit()">Редактировать</button>
-      <button mat-menu-item (click)="onDelete()">Удалить</button>
+    <button class="menu-item" mat-menu-item (click)="onEdit()">
+      <mat-icon>edit</mat-icon>
+      <span>Редактировать</span>
+    </button>
+    <button class="menu-item" mat-menu-item (click)="onDelete()">
+      <mat-icon>delete</mat-icon>
+      <span>Удалить</span>
+    </button>
   </ng-template>
 </mat-menu>
