fix(category-tree-node): expand button animation

--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -66,6 +66,7 @@
 
   &__expand-button {
     user-select: none;
+    transition: transform 0.2s ease-out;
     transform: rotate(0deg);
 
     &--expanded {
