--- a/src/app/shared/components/settings/settings.component.scss
+++ b/src/app/shared/components/settings/settings.component.scss
@@ -29,9 +29,33 @@
   }
 
   &__content {
-    height: 500px;
     padding: 32px;
 
     background: rgb(247, 247, 247);
+  }
+
+  &__item {
+    display: flex;
+    height: 64px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 16px;
+  }
+
+  &__item-label {
+    display: flex;
+    align-items: center;
+
+    &-icon {
+      margin-right: 8px;
+    }
+  }
+
+  &__item-field {
+    width: 70%;
+  }
+
+  &__item-field--disable {
+    color: gray;
   }
 }
