feat(records-table): translate menu

--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -81,11 +81,11 @@
   <ng-template matMenuContent>
     <button class="menu-item" mat-menu-item (click)="onEdit()">
       <mat-icon>edit</mat-icon>
-      <span>Редактировать</span>
+      <span>{{"MENU.EDIT" | translate}}</span>
     </button>
     <button class="menu-item" mat-menu-item (click)="onDelete()">
       <mat-icon>delete</mat-icon>
-      <span>Удалить</span>
+      <span>{{"MENU.DELETE" | translate}}</span>
     </button>
   </ng-template>
 </mat-menu>
