feat(app): add feedback support

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,8 +22,8 @@
       <button class="menu-item" mat-menu-item (click)="openSettings()">
         <span>{{"MENU.SETTINGS" | translate}}</span>
       </button>
-      <button class="menu-item" mat-menu-item>
-        <span>{{"MENU.ABOUT" | translate}}</span>
+      <button class="menu-item" mat-menu-item (click)="openRepository()">
+        <span>{{"MENU.GITHUB" | translate}}</span>
       </button>
   </ng-template>
 </mat-menu>
