refactor(database-select): translation

--- a/src/app/database-select/database-select.component.html
+++ b/src/app/database-select/database-select.component.html
@@ -1,9 +1,9 @@
 <div class="database-select">
   <div class="database-select__text">
-    База данных отсутствует.
+    {{"PAGES.DATABASE_SELECT.TEXT" | translate}}
   </div>
   <div>
-    <button mat-button class="button__create" (click)="onCreate()">Создать</button>
-    <button mat-button (click)="onOpen()">Открыть</button>
+    <button mat-button class="button__create" (click)="onCreate()">{{"PAGES.DATABASE_SELECT.CREATE" | translate}}</button>
+    <button mat-button (click)="onOpen()">{{"PAGES.DATABASE_SELECT.OPEN" | translate}}</button>
   </div>
 </div>
