--- a/src/app/empty/empty.component.html
+++ b/src/app/empty/empty.component.html
@@ -1,6 +1,6 @@
 <div class="empty">
   <div class="empty__text">
     <mat-icon class="empty__icon">receipt_long</mat-icon>
-    <span>Выберите категорию</span>
+    <span>{{"PAGES.EMPTY.TEXT" | translate}}</span>
   </div>
 </div>
