--- a/src/app/shared/components/delete-dialog/delete-dialog.component.scss
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.scss
@@ -1,20 +1,36 @@
 .delete-dialog {
-  &__title {
-    height: 64px;
-    padding: 0 24px;
+
+  &__header {
+    height: 42px;
+    padding: 4px 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    background-color: rgb(50, 48, 48);
+  }
+
+  &__header-text {
+    color: white;
+  }
+
+  &__button-container {
     display: flex;
     align-items: center;
 
-    font-family: Ubuntu;
-    font-weight: lighter;
-    font-size: 24px;
-    color: white;
+    &:first-child {
+      margin-right: auto;
+      justify-content: flex-start;
+    }
 
-    background: #262626;
+    &:last-child {
+      margin-left: auto;
+      justify-content: flex-end;
+    }
   }
 
   &__content {
-    padding: 24px 24px;
+    padding: 32px;
   }
 
   &__footer {
@@ -30,9 +46,14 @@
   }
   
   .button__submit {
-    margin-right: 8px;
     background-color: #c7162b;
     border-color: #c7162b;
+    color: #fff;
+  }
+
+  .button__cancel {
+    background-color: rgb(75, 72, 72);
+    border-color: rgb(48,47,47);
     color: #fff;
   }
 }
