refactor(create-record): styles

--- a/src/app/shared/components/create-dialog/create-dialog.component.scss
+++ b/src/app/shared/components/create-dialog/create-dialog.component.scss
@@ -31,7 +31,8 @@
   }
 
   &__content {
-    padding: 32px;
+    padding: 16px 32px;
+
     mat-form-field {
       font-family: 'Ubuntu';
       font-weight: lighter;
