--- a/src/app/shared/components/create-record/create-record.component.scss
+++ b/src/app/shared/components/create-record/create-record.component.scss
@@ -1,20 +1,37 @@
 .create-record {
-  &__title {
-    height: 64px;
-    padding: 0 24px;
+
+  &__header {
+    height: 42px;
+    padding: 4px 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    background-color: rgb(50, 48, 48);
+  }
+
+  &__header-text {
+    color: white;
+  }
+
+  &__button-container {
     display: flex;
     align-items: center;
 
-    font-family: Ubuntu;
-    font-weight: lighter;
-    font-size: 24px;
-    color: white;
+    &:first-child {
+      margin-right: auto;
+      justify-content: flex-start;
+    }
 
-    background: #262626;
+    &:last-child {
+      margin-left: auto;
+      justify-content: flex-end;
+    }
   }
 
   &__content {
-    padding: 16px 24px;
+    padding: 16px 32px;
+
     mat-form-field {
       font-family: 'Ubuntu';
       font-weight: lighter;
@@ -40,12 +57,6 @@
       color: #c7162b;
     }
   }
-
-  &__footer {
-    display: flex;
-    justify-content: flex-end;
-    padding: 0px 24px 16px 24px;
-  }
 }
 
 .button {
@@ -55,9 +66,14 @@
 }
 
 .button__submit {
-  margin-right: 8px;
   background-color: #0d7f1e;
   border-color: rgba(0,0,0,0.56);
+  color: #fff;
+}
+
+.button__cancel {
+  background-color: rgb(75, 72, 72);
+  border-color: rgb(48,47,47);
   color: #fff;
 }
 
