--- a/src/app/shared/components/create-dialog/create-dialog.component.html
+++ b/src/app/shared/components/create-dialog/create-dialog.component.html
@@ -8,11 +8,15 @@
       <button class="button button__submit" mat-button (click)="onSubmit()">{{(data.mode === 0 ? "DIALOG.BUTTONS.ADD" : "DIALOG.BUTTONS.EDIT") | translate}}</button>
     </div>
   </header>
+
   <main class="create-dialog__content">
     <form [formGroup]="categoryForm">
       <mat-form-field [floatLabel]="'always'">
         <mat-label>{{"DIALOG.FIELDS.NAME" | translate}}</mat-label>
-        <input [required]="true" [formControlName]="'name'" matInput value="Sushi">
+        <input [required]="true" [formControlName]="'name'" matInput>
+        <mat-error>
+          {{"DIALOG.VALIDATIONS.NAME" | translate}}
+        </mat-error>
       </mat-form-field>
       <mat-form-field [floatLabel]="'always'">
       <mat-label>{{"DIALOG.FIELDS.CATEGORY" | translate}}</mat-label>
