--- a/src/app/shared/components/release-notes/release-notes.component.html
+++ b/src/app/shared/components/release-notes/release-notes.component.html
@@ -16,34 +16,34 @@
   </header>
 
   <main class="release-notes__content">
-    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion].features.length">
+    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion][appLanguage].features.length">
       <div class="release-notes__section-title">
-        Добавленный функционал:
+        {{"DIALOG.RELEASE_NOTES.NEW_FEATURES" | translate}}:
       </div>
       <ul>
-        <li class="release-notes__change" *ngFor="let feature of releaseNotes.releaseNotes[selectedVersion].features">
+        <li class="release-notes__change" *ngFor="let feature of releaseNotes.releaseNotes[selectedVersion][appLanguage].features">
           {{feature.text}}
         </li>
       </ul>
     </div>
 
-    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion].improvements.length">
+    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion][appLanguage].improvements.length">
       <div class="release-notes__section-title">
-        Улучшения:
+        {{"DIALOG.RELEASE_NOTES.IMPROVEMENTS" | translate}}:
       </div>
       <ul>
-        <li class="release-notes__change" *ngFor="let improvement of releaseNotes.releaseNotes[selectedVersion].improvements">
+        <li class="release-notes__change" *ngFor="let improvement of releaseNotes.releaseNotes[selectedVersion][appLanguage].improvements">
           {{improvement.text}}
         </li>
       </ul>
     </div>
 
-    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion].bugFixes.length">
+    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion][appLanguage].bugFixes.length">
       <div class="release-notes__section-title">
-        Исправленные ошибки:
+        {{"DIALOG.RELEASE_NOTES.BUGFIXES" | translate}}:
       </div>
       <ul>
-        <li class="release-notes__change" *ngFor="let bugFix of releaseNotes.releaseNotes[selectedVersion].bugFixes">
+        <li class="release-notes__change" *ngFor="let bugFix of releaseNotes.releaseNotes[selectedVersion][appLanguage].bugFixes">
           {{bugFix.text}}
         </li>
       </ul>
