--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.html
@@ -39,16 +39,13 @@
 <mat-menu #contextMenu="matMenu">
   <ng-template matMenuContent>
       <button class="menu-item" mat-menu-item *ngIf="!child.parent" (click)="onAdd()">
-        <mat-icon>add</mat-icon>
-        <span>Добавить</span>
+        <span>{{"MENU.ADD" | translate}}</span>
       </button>
       <button class="menu-item" mat-menu-item (click)="onEdit()">
-        <mat-icon>edit</mat-icon>
-        <span>Редактировать</span>
+        <span>{{"MENU.EDIT" | translate}}</span>
       </button>
       <button class="menu-item" mat-menu-item (click)="onDelete()">
-        <mat-icon>delete</mat-icon>
-        <span>Удалить</span>
+        <span>{{"MENU.DELETE" | translate}}</span>
       </button>
   </ng-template>
 </mat-menu>
