--- a/src/app/shared/components/release-notes/release-notes.component.scss
+++ b/src/app/shared/components/release-notes/release-notes.component.scss
@@ -1,25 +1,40 @@
 .release-notes {
   position: relative;
 
-  &__title {
-    height: 64px;
-    padding: 0 24px;
+  &__header {
+    height: 42px;
+    padding: 4px 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    font-family: Ubuntu;
-    font-weight: lighter;
-    font-size: 24px;
-    color: white;
+    background-color: rgb(50, 48, 48);
+  }
 
-    background: #262626;
+  &__header-text {
+    color: white;
+  }
+
+  &__button-container {
+    width: 64px;
+    display: flex;
+    align-items: center;
+
+    &:first-child {
+      margin-right: auto;
+      justify-content: flex-start;
+    }
+
+    &:last-child {
+      margin-left: auto;
+      justify-content: flex-end;
+    }
   }
 
   &__content {
     display: flex;
     flex-direction: column;
-    padding: 36px 24px 24px 24px;
+    padding: 32px;
   }
 
   &__section-title {
@@ -36,10 +51,16 @@
   }
 
   &__version-select {
-    width: 128px;
+    width: 64px;
     align-self: flex-end;
 
-    position: absolute;
-    top: 80px;
+    &::ng-deep .mat-select-value,
+    &::ng-deep .mat-select-arrow {
+      color: white;
+    }
+
+    &::ng-deep .mat-form-field-underline {
+      background: white;
+    }
   }
 }
