feat(navigation-component): what's new button

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,6 +22,9 @@
       <button class="menu-item" mat-menu-item (click)="openSettings()">
         <span>{{"MENU.SETTINGS" | translate}}</span>
       </button>
+      <button class="menu-item" mat-menu-item (click)="openReleaseNotes()">
+        <span>{{"MENU.WHATS_NEW" | translate}}</span>
+      </button>
       <button class="menu-item" mat-menu-item (click)="openRepository()">
         <span>{{"MENU.GITHUB" | translate}}</span>
       </button>
