--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -18,7 +18,7 @@
   &__icon-container {
     display: flex;
     align-items: center;
-    width: 20px;
+    width: 22px;
     margin-right: 8px;
   }
 
@@ -29,7 +29,7 @@
   }
 
   &__icon {
-    width: 20px;
+    width: 22px;
   }
 
   &__content {
@@ -86,6 +86,12 @@
     visibility: hidden;
     margin-left: auto;
     color: #111;
+  }
+}
+
+.categories-tree-node__content--select {
+  .categories-tree-node__icon--mono {
+    filter: invert(1);
   }
 }
 
